--- a/contacto.html
+++ b/contacto.html
@@ -68,8 +68,10 @@
                         aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end mx-auto" id="navbarNavAltMarkup">
-                            <div id="navegacion-principal" class="navbar-nav text-uppercase">
+                        <div 
+                        class="collapse navbar-collapse d-lg-flex mx-auto ml-0im flex-wrap"
+                        id="navbarNavAltMarkup">
+                            <div id="navegacion-principal" class="navbar-nav text-uppercase mb-4 mx-auto">
                                 <a 
                                 class="nav-link p-3 active" 
                                 aria-current="page" 
@@ -86,6 +88,8 @@
                                 <a 
                                 class="nav-link p-3" 
                                 href="contacto.html">Contacto</a>
+                            </div>
+                            <div class="col-12 navbar-nav text-uppercase justify-content-center">
                                 <!-- Páginas web relacionadas -->
                                 <a 
                                 class="nav-link p-3 redireccion-web" 
@@ -103,6 +107,10 @@
                                 class="nav-link p-3 redireccion-web" 
                                 href="https://masterlimpio.com/" 
                                 target="_blank">Máster Limpio</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://pozosriomar.com" 
+                                target="_blank">Pozos Rio Mar</a>
                             </div>
                         </div>
                     </div>
@@ -287,7 +295,7 @@
                         </div>
                     </div>
                     <div class="col-12 bg-white p-3 p-lg-5 mt-5">
-                        <h3 class="text-center w-auto mb-4">
+                        <h3 class="text-center w-auto mb-4 fw-bold">
                             Solicito personal para el Área de Ingeniería Civil, con experiencia en la realización de las siguientes Actividades:
                         </h3>
                         <div class="card mx-auto bg-white">
@@ -412,64 +420,123 @@
 				</div>
             </div>
             <div class="row contenidoFooter justify-content-center justify-content-md-between">
-                <div class="footer-informacion col-12 col-lg-6 col-xl-3 row d-block mb-md-4 mb-lg-0">
-                    <h4 class="text-center text-uppercase">Sobre <span>Albercas del Mar</span></h4>
-                    <hr class="w-auto">
-                    <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Dirección:</h4>
-                    <p style="text-align: justify;">
-                        <br>
-                        Nicolas Bravo 341, Centro, <br> Cd. Lázaro Cárdenas, Mich, MX.
-                    </p>
-                    <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Horarios de atención:</h4>
-                    <p style="text-align: justify;">
+                <div class="row footer-informacion mx-0">
+                    <div class="col-12 col-md-6">
+                        <h4 class="text-center text-uppercase">
+                            Sobre <span>Albercas del Mar</span>
+                        </h4>
+                        <hr class="w-auto">
+                        <h4 class="b-b-3px-c-secundario mb-0 text-uppercase mb-4">Dirección:</h4>
+                        <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15181.535966728045!2d-102.2063243830831!3d17.96086330779546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315c6f0e055555%3A0x8efb2bd16613fb75!2sPalapas%20y%20Caba%C3%B1as%20Rio%20Mar!5e0!3m2!1ses!2smx!4v1654283596615!5m2!1ses!2smx"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <p class="text-justify p-4">
+                            Nicolas Bravo 341, Centro, <br> Cd. Lázaro Cárdenas, Mich, MX.
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h4 class="b-b-3px-c-secundario mb-4 text-uppercase">Horarios de atención:</h4>
                         <div class="d-flex align-items-center p-0">
                             <i class="fa fa-check"></i>
                             <span class="d-block">Lu. a Vi. de 07:00 am a 08:00 pm</span>
                         </div>
-                        <div class="d-flex align-items-center p-0">
+                        <div class="d-flex align-items-center p-0 mb-4">
                             <i class="fa fa-check"></i>
                             <span class="d-block">Sábados de 07:00 am a 02:00 pm</span>
                         </div>
-                    </p>
-                    <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Teléfonos:</h4>
-                    <ul class="p-2 links">
-                        <li>
-                            <a href="tel:+52 (753) 537 3761">
-                                &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 537 3761
-                            </a>
-                        </li>
-                        <li>
-                            <a href="tel:+52 (753) 181 1195">
-                                &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 181 1195
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://wa.me/7531683407"
-                            target="_blank">
-                                &nbsp;<i class="fa fa-whatsapp"></i>&nbsp;+52 (753) 168 3407
-                            </a>
-                        </li>
-                    </ul>               
+                        <h4 class="b-b-3px-c-secundario mb-4 text-uppercase">Teléfonos:</h4>
+                        <ul class="p-2 links">
+                            <li>
+                                <a href="tel:+52 (753) 537 3761">
+                                    &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 537 3761
+                                </a>
+                            </li>
+                            <li>
+                                <a href="tel:+52 (753) 181 1195">
+                                    &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 181 1195
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://wa.me/7531683407"
+                                target="_blank">
+                                    &nbsp;<i class="fa fa-whatsapp"></i>&nbsp;+52 (753) 168 3407
+                                </a>
+                            </li>
+                        </ul>
+                    </div>  
                 </div>
-                <div class="ultimos-tweets col-12 col-lg-6 col-xl-3 row d-block mb-md-4 mb-lg-0">
+                <div class="row ultimos-tweets mx-0">
                     <h4 class="text-center text-uppercase">
                         Últimas <span>Publicaciones</span>
                         <hr class="w-auto">
                     </h4>
-                    <div 
-                    class="fb-page" 
-                    data-href="https://www.facebook.com/AlbercasDelMarLC"
-                    data-tabs="timeline" 
-                    data-width=""
-                    data-height="" 
-                    data-small-header="false"
-                    data-adapt-container-width="true" 
-                    data-hide-cover="false" 
-                    data-show-facepile="true">
-                        <blockquote cite="https://www.facebook.com/AlbercasDelMarLC/" class="fb-xfbml-parse-ignore">
-                            <a href="https://www.facebook.com/AlbercasDelMarLC/">Albercas del mar</a>
-                        </blockquote>
+                    <div class="col-12 col-md-4">
+                        <div 
+                        class="fb-page w-100" 
+                        data-href="https://www.facebook.com/AlbercasDelMarLC"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/AlbercasDelMarLC/" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/AlbercasDelMarLC/">Albercas del mar</a>
+                            </blockquote>
+                        </div>
                     </div>
+                    <div class="col-12 col-md-4">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/ConstructoraRioMarLZC"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/ConstructoraRioMarLZC/" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/ConstructoraRioMarLZC/">Constructora RioMar</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/pozosdeaguahl"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/pozosdeaguahl" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/pozosdeaguahl">Pozos de agua</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/LimpiezaFumigacioneslzc" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/LimpiezaFumigacioneslzc">Master limpieza</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 d-block mb-md-4 mb-lg-0">
                     <h4 class="text-center text-uppercase">
                         Redes <span>sociales:</span>
                         <hr class="w-auto">
@@ -511,7 +578,7 @@
                         <hr>
                     </nav>
                 </div>
-                <div class="menu col-12 col-lg-6 col-xl-3 row d-block">
+                <div class="menu col-12 col-md-4 d-block">
                     <h4 class="text-center text-uppercase">Divisiones de <span>empresas</span>:</h4>
                     <ul class="links paginasWeb">
                         <li>
@@ -555,23 +622,12 @@
                             </a>
                         </li>
                         <li>
-                            Pozos Rio Mar:<br>
-                            <a target="_blank" href="https://pozosriomar.com/">
-                                <i class="fa fa-globe"></i>
-                                www.pozosriomar.com
-                            </a>
-                        </li>
-                        <li>
                             Geo Rio Mar:<br>
                             <a target="_blank" href="https://georiomar.com/">
                                 <i class="fa fa-globe"></i>
                                 www.georiomar.com
                             </a>
                         </li>
-                    </ul>
-                </div>
-                <div class="menu col-12 col-lg-6 col-xl-3 row d-block">
-                    <ul class="links paginasWeb">
                         <li>
                             Andamios HL:<br>
                             <a target="_blank" href="https://andamioshl.com/">
@@ -579,6 +635,10 @@
                                 www.andamioshl.com
                             </a>
                         </li>
+                    </ul>
+                </div>
+                <div class="menu col-12 col-md-4 d-block pt-0">
+                    <ul class="links paginasWeb">
                         <li>
                             Contenedores Del Mar:<br>
                             <a target="_blank" href="https://contenedoresdelmar.com/">
@@ -634,7 +694,7 @@
         </div>
         <p class="copyright fw-bold">
             <span class="d-block">©Todos los Derechos Reservados</span>
-            <span>Albercas del Mar<span class="anio-actual">---</span></span>
+            <span>Albercas del Mar <span class="anio-actual">---</span></span>
         </p>
     </footer>
     <!-- <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script> -->
