--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
                         aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end mx-auto ml-0im " id="navbarNavAltMarkup">
-                            <div id="navegacion-principal" class="navbar-nav text-uppercase">
+                        <div 
+                        class="collapse navbar-collapse d-lg-flex mx-auto ml-0im flex-wrap"
+                        id="navbarNavAltMarkup">
+                            <div id="navegacion-principal" class="navbar-nav text-uppercase mb-4 mx-auto">
                                 <a 
                                 class="nav-link p-3 active" 
                                 aria-current="page" 
@@ -86,6 +88,8 @@
                                 <a 
                                 class="nav-link p-3" 
                                 href="contacto.html">Contacto</a>
+                            </div>
+                            <div class="col-12 navbar-nav text-uppercase justify-content-center">
                                 <!-- Páginas web relacionadas -->
                                 <a 
                                 class="nav-link p-3 redireccion-web" 
@@ -892,7 +896,7 @@
 				</div>
             </div>
             <div class="row contenidoFooter justify-content-center justify-content-md-between">
-                <div class="row footer-informacion">
+                <div class="row footer-informacion mx-0">
                     <div class="col-12 col-md-6">
                         <h4 class="text-center text-uppercase">
                             Sobre <span>Albercas del Mar</span>
@@ -938,7 +942,7 @@
                         </ul>
                     </div>  
                 </div>
-                <div class="row ultimos-tweets">
+                <div class="row ultimos-tweets mx-0">
                     <h4 class="text-center text-uppercase">
                         Últimas <span>Publicaciones</span>
                         <hr class="w-auto">
@@ -1008,7 +1012,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="ultimos-tweets col-12 col-lg-6 col-xl-3 row d-block mb-md-4 mb-lg-0">
+                <div class="col-12 col-md-4 d-block mb-md-4 mb-lg-0">
                     <h4 class="text-center text-uppercase">
                         Redes <span>sociales:</span>
                         <hr class="w-auto">
@@ -1050,7 +1054,7 @@
                         <hr>
                     </nav>
                 </div>
-                <div class="menu col-12 col-lg-6 col-xl-3 row d-block">
+                <div class="menu col-12 col-md-4 d-block">
                     <h4 class="text-center text-uppercase">Divisiones de <span>empresas</span>:</h4>
                     <ul class="links paginasWeb">
                         <li>
@@ -1100,10 +1104,6 @@
                                 www.georiomar.com
                             </a>
                         </li>
-                    </ul>
-                </div>
-                <div class="menu col-12 col-lg-6 col-xl-3 row d-block">
-                    <ul class="links paginasWeb">
                         <li>
                             Andamios HL:<br>
                             <a target="_blank" href="https://andamioshl.com/">
@@ -1111,6 +1111,10 @@
                                 www.andamioshl.com
                             </a>
                         </li>
+                    </ul>
+                </div>
+                <div class="menu col-12 col-md-4 d-block pt-0">
+                    <ul class="links paginasWeb">
                         <li>
                             Contenedores Del Mar:<br>
                             <a target="_blank" href="https://contenedoresdelmar.com/">
