--- a/servicios.html
+++ b/servicios.html
@@ -45,7 +45,7 @@
     </div>
     <header class="site-header inicio">
         <div class="row mx-0">
-            <div class="col-12 col-md-2 p-0">
+            <div class="col-12 col-lg-2 p-0">
                 <div class="logo mx-auto">
                     <a href="index.html">
                         <img src="img/logo/logo_albercas_del_mar.png" alt="ALBERCAS DEL MAR LOGO">
@@ -55,7 +55,7 @@
                     Diseño y construcción de albercas
                 </h4>
             </div>
-            <div class="col-12 col-md-10 p-0">
+            <div class="col-12 col-lg-10 p-0">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 box-shadow-principal h-100">
                     <div class="container-fluid">
                         <button 
@@ -89,7 +89,7 @@
                                 class="nav-link p-3" 
                                 href="contacto.html">Contacto</a>
                             </div>
-                            <div class="col-12 navbar-nav text-uppercase justify-content-center">
+                            <div class="col-12 navbar-nav text-uppercase justify-content-center menu-paginas-web">
                                 <!-- Páginas web relacionadas -->
                                 <a 
                                 class="nav-link p-3 redireccion-web" 
@@ -632,7 +632,7 @@
             </div>
             <div class="row contenidoFooter justify-content-center justify-content-md-between">
                 <div class="row footer-informacion mx-0">
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6 overflow-hidden">
                         <h4 class="text-center text-uppercase">
                             Sobre <span>Albercas del Mar</span>
                         </h4>
