--- a/nosotros.html
+++ b/nosotros.html
@@ -120,8 +120,7 @@
     </header>
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo row mx-0 p-r">
-            <div class="sombra-seccion"></div>
-            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header text-center">
+            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header text-center mb-0px">
                 <span class="linea-horizontal mx-auto w-auto"></span>
                 Contamos con personal capacitado, equipo y materiales para la realización de nuestros trabajos, realizamos su proyecto
                 de alberca dentro y fuera de la ciudad.
