--- a/servicios.html
+++ b/servicios.html
@@ -120,8 +120,7 @@
     </header>
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo img-fondo-servicios row mx-0 p-r">
-            <div class="sombra-seccion"></div>
-            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header">
+            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header mb-0px">
                 <span class="linea-horizontal mx-auto w-auto"></span>
                 <div class="text-center d-flex justify-content-center align-items-center">
                     <div class="bineta-circle"></div>
