--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@
             </section>
         </div>
         
-        <section class="imagen-contacto">
-            <div class="contenedor contenido-contacto">
+        <section class="imagen-contacto p-r">
+            <div class="contenedor contenido-contacto contenedor-informacion-imagen">
                 <h2>Encuentra la alberca de tus sueños</h2>
                 <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
                 <a 
