--- a/nosotros.html
+++ b/nosotros.html
@@ -120,10 +120,10 @@
     </header>
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo row mx-0 p-r">
-            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header text-center mb-0px">
+            <div 
+            class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header text-center mb-0px contenedor-informacion-imagen">
                 <span class="linea-horizontal mx-auto w-auto"></span>
-                Contamos con personal capacitado, equipo y materiales para la realización de nuestros trabajos, realizamos su proyecto
-                de alberca dentro y fuera de la ciudad.
+                Construimos la alberca de tus sueños.
             </div>
         </article>
     </section>
