--- a/servicios.html
+++ b/servicios.html
@@ -120,23 +120,24 @@
     </header>
     <section class="informacion-principal-nosotros">
         <article class="imagen-fondo img-fondo-servicios row mx-0 p-r">
-            <div class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header mb-0px">
+            <div 
+            class="text-white mx-auto my-auto titulo-seccion z-index-10 fondo-seccion seccion-informacion-header mb-0px contenedor-informacion-imagen">
                 <span class="linea-horizontal mx-auto w-auto"></span>
                 <div class="text-center d-flex justify-content-center align-items-center">
                     <div class="bineta-circle"></div>
                     Mantenimiento y limpieza
                 </div> 
-                <div class="text-center d-flex align-items-center">
+                <div class="text-center d-flex align-items-center d-none">
                     <div class="bineta-circle"></div>
                     Atención personalizada con servicio de asistencia las 24 hrs del día, los 365 días de año.
                 </div>
-                <div class="text-center d-flex align-items-center">
+                <div class="text-center d-flex align-items-center d-none">
                     <div class="bineta-circle"></div>
                     Análisis de su instalación y mantenimiento para producir los consumos de agua y electricidad.
                 </div>
-                <div class="text-center d-flex align-items-center">
+                <div class="text-center d-flex align-items-center justify-content-center">
                     <div class="bineta-circle"></div>
-                    Construcción, reparación, rehabilitación y mantenimiento de albercas.
+                    Construcción, diseño, reparación, rehabilitación y mantenimiento de albercas.
                 </div>
             </div>
         </article>
@@ -231,14 +232,6 @@
                                 <img src="img/baner_informacion_a.png" alt="Centros recreativos">
                             </div>
                         </article>
-                        <article class="tarjeta-presentacion-servicio box-shadow-secundario col-12">
-                            <div class="header-tarjeta">
-                                <h3 class="fw-bold">Balnearios</h3>
-                            </div>
-                            <div class="contenido-tarjeta b-c-white color-quinto">
-                                <img src="img/baner_informacion_a.png" alt="Balnearios">
-                            </div>
-                        </article>
                     </div>
                     <div class="col-12 col-md-6">
                         <article class="tarjeta-presentacion-servicio box-shadow-secundario col-12">
@@ -303,6 +296,14 @@
                             </div>
                             <div class="contenido-tarjeta b-c-white color-quinto">
                                 <img src="img/baner_informacion_a.png" alt="Centros deportivos">
+                            </div>
+                        </article>
+                        <article class="tarjeta-presentacion-servicio box-shadow-secundario col-12">
+                            <div class="header-tarjeta">
+                                <h3 class="fw-bold">Balnearios</h3>
+                            </div>
+                            <div class="contenido-tarjeta b-c-white color-quinto">
+                                <img src="img/baner_informacion_a.png" alt="Balnearios">
                             </div>
                         </article>
                     </div>
