--- a/index.html
+++ b/index.html
@@ -644,7 +644,27 @@
                 </div>
             </section>
         </div>
-        
+        <!-- Servicios -->
+        <h1 class="titulo-descriptivo titulo-principal letter-spacing-5px text-uppercase text-center">
+            Tipos de albercas que le ofrecemos:
+        </h1>
+        <div class="row mx-0 my-5">
+            <div class="col-12 col-md-4">
+                <div class="header-tarjeta">
+                    <h3>Albercas Comerciales:</h3>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="header-tarjeta">
+                    <h3>Albercas Residenciales:</h3>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="header-tarjeta">
+                    <h3>Albercas Naturales:</h3>
+                </div>
+            </div>
+        </div>
         <section class="imagen-contacto p-r">
             <div class="contenedor contenido-contacto contenedor-informacion-imagen">
                 <h2>Encuentra la alberca de tus sueños</h2>
