--- a/index.html
+++ b/index.html
@@ -653,11 +653,83 @@
                 <div class="header-tarjeta">
                     <h3>Albercas Comerciales:</h3>
                 </div>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Hoteles</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Hoteles">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Centros de recreación</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Centros de recreación">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Parques acuticos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Parques acuticos">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas olímpicas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas olímpicas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas olímpicas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas olímpicas">
+                    </div>
+                </article>
             </div>
             <div class="col-12 col-md-4">
                 <div class="header-tarjeta">
                     <h3>Albercas Residenciales:</h3>
                 </div>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Piscina</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Piscina">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas pequeñas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas pequeñas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Chapoteaderos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Chapoteaderos">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas pequeñas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas pequeñas">
+                    </div>
+                </article>
             </div>
             <div class="col-12 col-md-4">
                 <div class="header-tarjeta">
