--- a/index.html
+++ b/index.html
@@ -724,10 +724,26 @@
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
                     <div class="header-tarjeta">
-                        <h3>Albercas pequeñas</h3>
+                        <h3>Albercas de cristales</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas pequeñas">
+                        <img src="img/servicios/" alt="Albercas de cristales">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas nalturas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas nalturas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas en alturas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas en alturas">
                     </div>
                 </article>
             </div>
@@ -735,6 +751,54 @@
                 <div class="header-tarjeta">
                     <h3>Albercas Naturales:</h3>
                 </div>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas saladas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas saladas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas agua de mar</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas agua de mar">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas rústicas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas rústicas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas ecológicas</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas ecológicas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Albercas de terapia física</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Albercas de terapia física">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Chapoteaderos niño</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/servicios/" alt="Chapoteaderos niño">
+                    </div>
+                </article>
             </div>
         </div>
         <section class="imagen-contacto p-r">
