--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                         <h3>Hoteles</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Hoteles">
+                        <img src="img/galeria/tipos_alberca/comerciales/hoteles.jpg" alt="Hoteles">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -666,23 +666,15 @@
                         <h3>Centros de recreación</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Centros de recreación">
+                        <img src="img/galeria/tipos_alberca/comerciales/centro_recreacion.jpg" alt="Centros de recreación">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
                     <div class="header-tarjeta">
-                        <h3>Parques acuticos</h3>
+                        <h3>Parques acuáticos</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Parques acuticos">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Albercas olímpicas</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas olímpicas">
+                        <img src="img/galeria/tipos_alberca/comerciales/parques_acuaticos.jpg" alt="Parques acuáticos">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -690,7 +682,15 @@
                         <h3>Albercas olímpicas</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas olímpicas">
+                        <img src="img/galeria/tipos_alberca/comerciales/albercas_olimpicas.jpg" alt="Albercas olímpicas">
+                    </div>
+                </article>
+                <article class="tarjeta-presentacion-servicio col-12">
+                    <div class="header-tarjeta">
+                        <h3>Chapoteaderos</h3>
+                    </div>
+                    <div class="contenido-tarjeta">
+                        <img src="img/galeria/tipos_alberca/comerciales/chapoteadero.jpg" alt="Chapoteaderos">
                     </div>
                 </article>
             </div>
@@ -703,7 +703,7 @@
                         <h3>Piscina</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Piscina">
+                        <img src="img/galeria/tipos_alberca/residenciales/piscinas.jpg" alt="Piscina">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -711,23 +711,15 @@
                         <h3>Albercas pequeñas</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas pequeñas">
+                        <img src="img/galeria/tipos_alberca/residenciales/albercas_pequenas.jpg" alt="Albercas pequeñas">
                     </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Chapoteaderos</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Chapoteaderos">
-                    </div>
-                </article>
+                </article>                
                 <article class="tarjeta-presentacion-servicio col-12">
                     <div class="header-tarjeta">
                         <h3>Albercas de cristales</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas de cristales">
+                        <img src="img/galeria/tipos_alberca/residenciales/alberca_cristal.jpg" alt="Albercas de cristales">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -735,7 +727,7 @@
                         <h3>Albercas nalturas</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas nalturas">
+                        <img src="img/galeria/tipos_alberca/residenciales/albercas_naturales.jpg" alt="Albercas nalturas">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -743,7 +735,7 @@
                         <h3>Albercas en alturas</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas en alturas">
+                        <img src="img/galeria/tipos_alberca/residenciales/albercas_altura.jpeg" alt="Albercas en alturas">
                     </div>
                 </article>
             </div>
@@ -756,7 +748,7 @@
                         <h3>Albercas saladas</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas saladas">
+                        <img src="img/galeria/tipos_alberca/naturales/salda.jpeg" alt="Albercas saladas">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -764,7 +756,7 @@
                         <h3>Albercas agua de mar</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas agua de mar">
+                        <img src="img/galeria/tipos_alberca/naturales/alberca_agua_salada.jpg" alt="Albercas agua de mar">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -772,7 +764,9 @@
                         <h3>Albercas rústicas</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas rústicas">
+                        <img 
+                        src="img/galeria/tipos_alberca/naturales/albercas_rusticas.jpg" 
+                        alt="Albercas rústicas">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -780,7 +774,7 @@
                         <h3>Albercas ecológicas</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas ecológicas">
+                        <img src="img/galeria/tipos_alberca/naturales/albercas_ecologicas.jpg" alt="Albercas ecológicas">
                     </div>
                 </article>
                 <article class="tarjeta-presentacion-servicio col-12">
@@ -788,15 +782,7 @@
                         <h3>Albercas de terapia física</h3>
                     </div>
                     <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Albercas de terapia física">
-                    </div>
-                </article>
-                <article class="tarjeta-presentacion-servicio col-12">
-                    <div class="header-tarjeta">
-                        <h3>Chapoteaderos niño</h3>
-                    </div>
-                    <div class="contenido-tarjeta">
-                        <img src="img/servicios/" alt="Chapoteaderos niño">
+                        <img src="img/galeria/tipos_alberca/naturales/alberca_terapia_fisica.jpg" alt="Albercas de terapia física">
                     </div>
                 </article>
             </div>
