--- a/index.html
+++ b/index.html
@@ -24,19 +24,14 @@
     <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/estilosPersonalizados.css">
     <link rel="stylesheet" href="css/otrosEstilos.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VQQ8DSKZG"></script>
-    <script>
+    <!-- <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-9VQQ8DSKZG');
-    </script>
+    </script> -->
 </head>
 <body class="none-scrollY">
     <div class="load-container visble">
@@ -152,9 +147,9 @@
                 class="d-block w-100">
                 <div class="carousel-caption d-flex">
                     <div class="p-r fondo-text-slider">
-                        <div class="font-size-120px line-height-normal-60p titulo-header">
-                            <p class="text-white titulo-principal">ALBERCAS</p>
-                            <p class="text-white mb-5 titulo-principal">DEL MAR</p>
+                        <div class="font-size-120px line-height-normal-60p titulo-header  p-5">
+                            <p class="text-white titulo-principal mb-0px">ALBERCAS</p>
+                            <p class="text-white mb-5 titulo-principal mb-0px">DEL MAR</p>
                         </div>
                     </div>
                     <div class="container mt-5">
@@ -1324,10 +1319,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/carousel.js"></script>
-    <script 
-    src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
     <div id="fb-root"></div>
     <script
     async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0"
